[package]
name = "yasg"
version = "0.1.0"
authors = ["Richard70NL <richard@richard70.nl>"]
edition = "2018"
description = "Yet Another Site Generator"
repository = "https://github.com/Richard70NL/yasg"
readme = "README.md"
keywords = ["site", "generator", "markdown", "yaml", "html"]
categories = ["command-line-utilities", "template-engine", "web-programming"]
license = "MIT"

[dependencies]
clap = "2.33.0"
yaml-rust = "0.4.3"
md = "0.0.1"
