[package]
name = "yasg"
version = "0.2.0"
authors = ["Richard70NL <richard@richard70.nl>"]
edition = "2018"
description = "Yet Another Site Generator"
repository = "https://github.com/Richard70NL/yasg"
readme = "README.md"
keywords = ["site", "generator", "markdown", "yaml", "html"]
categories = ["command-line-utilities", "template-engine", "web-programming"]
license = "MIT"
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
clap = "2.33.0"
yaml-rust = "0.4.3"
pulldown-cmark = "0.5.0"
mustache = "0.9.0"

[badges]
travis-ci = {repository = "Richard70NL/yasg"}
